--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
                     <div class="gallery-slide swiper-slide">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <img src="images/project1.jpg" alt="Boutique E-commerce" loading="lazy">
+                                <img src="images/e-commerce.jpg" alt="Boutique E-commerce" loading="lazy">
                                 <div class="gallery-overlay">
                                     <div class="gallery-info">
                                         <h3>Boutique E-commerce</h3>
@@ -1053,7 +1053,7 @@
                     <div class="gallery-slide swiper-slide">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <img src="images/project2.jpg" alt="Système CRM" loading="lazy">
+                                <img src="images/CRM.jpg" alt="Système CRM" loading="lazy">
                                 <div class="gallery-overlay">
                                     <div class="gallery-info">
                                         <h3>Système CRM</h3>
@@ -1072,7 +1072,7 @@
                     <div class="gallery-slide swiper-slide">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <img src="images/project3.jpg" alt="App Mobile" loading="lazy">
+                                <img src="images/app_mobile.png" alt="App Mobile" loading="lazy">
                                 <div class="gallery-overlay">
                                     <div class="gallery-info">
                                         <h3>App Mobile</h3>
@@ -1091,7 +1091,7 @@
                     <div class="gallery-slide swiper-slide">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <img src="images/project4.jpg" alt="Dashboard Analytics" loading="lazy">
+                                <img src="images/dashboard.jpg" alt="Dashboard Analytics" loading="lazy">
                                 <div class="gallery-overlay">
                                     <div class="gallery-info">
                                         <h3>Dashboard Analytics</h3>
@@ -1110,7 +1110,7 @@
                     <div class="gallery-slide swiper-slide">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <img src="images/project5.jpg" alt="Site Vitrine" loading="lazy">
+                                <img src="images/Site_Vitrine.jpg" alt="Site Vitrine" loading="lazy">
                                 <div class="gallery-overlay">
                                     <div class="gallery-info">
                                         <h3>Site Vitrine</h3>
@@ -1129,7 +1129,7 @@
                     <div class="gallery-slide swiper-slide">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <img src="images/project6.jpg" alt="Application ERP" loading="lazy">
+                                <img src="images/ERP.jpg" alt="Application ERP" loading="lazy">
                                 <div class="gallery-overlay">
                                     <div class="gallery-info">
                                         <h3>Solution ERP</h3>
@@ -1148,7 +1148,7 @@
                     <div class="gallery-slide swiper-slide">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <img src="images/project7.jpg" alt="Blog Platform" loading="lazy">
+                                <img src="images/blog-plateforme.jpg" alt="Blog Platform" loading="lazy">
                                 <div class="gallery-overlay">
                                     <div class="gallery-info">
                                         <h3>Plateforme Blog</h3>
@@ -1167,7 +1167,7 @@
                     <div class="gallery-slide swiper-slide">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <img src="images/project8.jpg" alt="App PWA" loading="lazy">
+                                <img src="images/PWA.jpg" alt="App PWA" loading="lazy">
                                 <div class="gallery-overlay">
                                     <div class="gallery-info">
                                         <h3>Application PWA</h3>
@@ -1186,7 +1186,7 @@
                     <div class="gallery-slide swiper-slide">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <img src="images/project9.jpg" alt="API REST" loading="lazy">
+                                <img src="images/logo.png" alt="API REST" loading="lazy">
                                 <div class="gallery-overlay">
                                     <div class="gallery-info">
                                         <h3>API REST</h3>
@@ -1205,7 +1205,7 @@
                     <div class="gallery-slide swiper-slide">
                         <div class="gallery-item">
                             <div class="gallery-image">
-                                <img src="images/project10.jpg" alt="Portfolio" loading="lazy">
+                                <img src="images/portfolio.png" alt="Portfolio" loading="lazy">
                                 <div class="gallery-overlay">
                                     <div class="gallery-info">
                                         <h3>Portfolio Personnel</h3>
